--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,55 @@ footer a {
   color: #024e76;
 }
 
+/* this gives space around the form box and the h2 section headers */
+section {
+  padding: 60px;
+}
+
+/* Hero Style Start */
+.hero {
+  background-image: url("../images/hero-bg.jpg");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+/* Hero Style End */
+
+/* Form Style Start */
+.hero-form {
+  border: 3px solid #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  width: 500px;
+  color: #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0px;
+}
+
+/* this selects the p in the class hero-form */
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  border: 1px solid #024e76;
+  display: block; /* this makes the inline text go to a separate line */
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%; /* this makes the white box be 100% width of the parent but also taking the content padding into consideration */
+  margin-bottom: 15px;
+}
+
+button {
+  padding: 5px;
+  color: #fce138;
+  background-color: #024e76;
+}
