--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ section {
   padding: 60px;
 }
 
-/* Hero Style Start */
+/* Hero Styles Start */
 .hero {
   background-image: url("../images/hero-bg.jpg");
   height: 600px;
@@ -82,9 +82,7 @@ section {
   background-position: center;
   position: relative;
 }
-/* Hero Style End */
 
-/* Form Style Start */
 .hero-form {
   border: 3px solid #024e76;
   background-color: #fce138;
@@ -116,8 +114,37 @@ section {
   margin-bottom: 15px;
 }
 
-button {
-  padding: 5px;
+.hero-form label {
+  margin: 0 5px; /* adds space to the left of the labels */
+}
+
+.hero-form button {
+  font-size: 16px;
   color: #fce138;
   background-color: #024e76;
+  padding: 10px 20px;
+  border: none; /* this removes the default border the button comes w */
+}
+/* Hero Style End */
+
+/* What We Do Style Start */
+.intro {
+  text-align: center;
+}
+
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid #fce138;
+  margin-bottom: 35px;
+  display: inline-block;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%; /* shrinks width of paragraph, and para. is not centered, just the text inside of it */
+  font-size: 20px;
+  margin: 0 auto; /* centers a block element with a width less than 100% */
 }
