--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,18 +127,28 @@ section {
 }
 /* Hero Style End */
 
-/* What We Do Style Start */
-.intro {
-  text-align: center;
-}
-
-.intro h2 {
+/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles START */
+.section-title {
   font-size: 55px;
   color: #024e76;
   padding: 0 100px 20px 100px;
-  border-bottom: 3px solid #fce138;
+  display: inline-block; /* this makes the bottom border listen to the padding above */
+  border-bottom: 3px solid;
   margin-bottom: 35px;
-  display: inline-block;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles END */
+
+/* What We Do Style Start */
+.intro {
+  text-align: center;
 }
 
 .intro p {
@@ -148,3 +158,35 @@ section {
   font-size: 20px;
   margin: 0 auto; /* centers a block element with a width less than 100% */
 }
+/* What We Do Style End */
+
+/* What You Do Style Start */
+.steps {
+  text-align: center; /* this also centered the svg images */
+  background: #fce138;
+}
+
+.steps div {
+  margin-bottom: 80px;
+}
+
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
+}
+/* What You Do Style End */
