--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,25 +127,6 @@ section {
 }
 /* Hero Style End */
 
-/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles START */
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  padding: 0 100px 20px 100px;
-  display: inline-block; /* this makes the bottom border listen to the padding above */
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
-}
-/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles END */
-
 /* What We Do Style Start */
 .intro {
   text-align: center;
@@ -190,3 +171,71 @@ section {
   font-size: 38px;
 }
 /* What You Do Style End */
+
+/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles START */
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  padding: 0 100px 20px 100px;
+  display: inline-block; /* this makes the bottom border listen to the padding above */
+  border-bottom: 3px solid;
+  margin-bottom: 35px;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/* Style Repeated For what-we-do what-you-do meet-the-trainers reach-out titles END */
+
+/* Meet The Trainers Style Start */
+.trainers {
+  text-align: center;
+}
+
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
+}
+
+.trainer img {
+  width: 35%;
+  float: left;
+}
+
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
+}
+
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right { /* it's good to keep class names generic to be used wherever */
+  text-align: right;
+}
+/* Meet The Trainers Style End */
