--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ body {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex; /* default is row so no need to declare */
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -32,7 +35,6 @@ header a {
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
