--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,17 +58,18 @@ footer {
   background-color: #fce138;
   width: 100%;
   padding: 40px 35px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -85,21 +86,36 @@ section {
 /* HERO STYLES START */
 .hero {
   background-image: url("../images/hero-bg.jpg");
-  height: 600px;
   background-size: cover; /* styles hero background image size */
   background-position: center; /* styles hero background image location, helps zoom out */
-  position: relative; /* moves element RELATIVE to its original position */
+  display: flex;
+  justify-content: center;
+
+  flex-wrap: wrap;
+}
+
+.hero-cta {
+  width: 35%; /* container width size = 35% of browser width */
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 .hero-form {
+  width: 40%;
+  margin: 3.5%;
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute; /* element is positioned relative to its 1st positioned ancestor element, it is removed from the document flow */
-  bottom: 120px;
-  right: 140px;
 }
 
 .hero-form h3 {
