--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,28 +167,53 @@ section {
   background: #fce138;
 }
 
-.steps div {
-  margin-bottom: 80px;
+.step { /* parent 1 */
+  margin: 50px auto; /* clears area outside the border and is transparent */
+  padding-bottom: 50px; /* space btw content container and border */
+  width: 80%; /* 80% of parent container size within margin*/
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.steps img {
-  width: 15%;
-  margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 { /* child 1a */
   color: #024e76;
   font-size: 46px;
   margin-top: 10px;
+  flex: 1 30%; /* 1=flex-grow 30%=flex-basis --> .step h3 will be at least 30% wide and will receive any extra space in the container */
 }
 
-.steps p {
+.step-info { /* child 1b and parent 2 */
+  flex: 2 70%; /* 2=flex-grow 70% flex-basis --> .step-info will be at least 70% wide but will receive any extra space in the container at a 2-to-1 ratio, so it will receive 2 more units of unused space than a sibling with a flex-grow of 1 */
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step-img { /* child 2a */
+  flex: 1 12%; /* giving it a flex-basis prevent the flexbox parent from ignoring it!! -->  .step-img at the very least must be 12% of the width of .step-info */
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%; /* limits width of img to whatever its container is --> this fixes an issue that can arise with other browsers */
+}
+
+.step-text { /* child 2b --> need to give this child it's needs */
+  flex: 12; /* flex-grow --> .step-text will be alloted 12x more unused space than .step-img --> flex-basis here is auto, which allows it to be whatever width is left over */
+}
+
+.step-text p {
   color: #39a6b2;
-  font-size: 23px;
+  font-size: 18px;
 }
 
-.steps span {
-  font-size: 38px;
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
 }
 /* WHAT YOU DO STYLES END */
 
