--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 /* UNIVERSAL STYLES */
 * {
   margin: 0;
@@ -8,7 +14,7 @@
 /* more on this crazy alphanumerical value in a minute! */
 /* adds color to the font of the entire page */
 body {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -16,7 +22,7 @@ body {
 /* apply styles to <header> */
 header {
   padding: 20px 35px;
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
   display: flex; /* default is row so no need to declare */
   justify-content: space-between;
   flex-wrap: wrap;
@@ -28,12 +34,13 @@ header {
   background-position: center;
   background-attachment: fixed; /* to place image relative to the viewport instead of the element, so theoretically, the image will look the same in every container if this is also used in that style */
   background-position: 80%;
+  z-index: 9999; /* brings header in front of everything */
 }
 
 header h1 {
   font-weight: bold;
   font-size: 36px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* horizontal offset, vertical offset, radius/size of blur, sets color to black at half transparency */
   margin: 0;
   display: inline;  
@@ -41,7 +48,7 @@ header h1 {
 
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 header nav {
@@ -65,8 +72,8 @@ header nav ul li a {
 }
 
 header nav ul li a:hover { /* added in 2.4.6 */
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -74,7 +81,7 @@ header nav ul li a:hover { /* added in 2.4.6 */
 
 /* FOOTER STYLES START */
 footer {
-  background-color: #fce138;
+  background-color: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   display: flex;
@@ -83,7 +90,7 @@ footer {
 }
 
 footer h2 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
@@ -94,7 +101,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76;
+  color: var(--secondary-color);
 }
 /* FOOTER STYLES END */
 
@@ -129,16 +136,16 @@ section {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-  color: #024e76;
+  color: var(--secondary-color);
   width: 40%;
   margin: 3.5%;
-  border: 3px solid #024e76;
-  background-color: rgba(252, 225, 56, 0.8);/* #fce138; */
+  border: 3px solid var(--secondary-color);
+  background-color: rgba(252, 225, 56, 0.8);/* var(--primary-color); */
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
@@ -155,11 +162,11 @@ section {
 }
 
 .form-input {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block; /* this makes the inline text go to a separate line */
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%; /* this makes the white box be 100% width of the parent but also taking the content padding into consideration */
   margin-bottom: 15px;
   border-radius: 10px;
@@ -175,24 +182,89 @@ section {
   margin: 0 5px; /* adds space to the left of the labels */
 }
 
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative; /* custom radio checkbox buttons will sit absolutely inside of the labels */
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+} /* preps the label elements so that the new buttons fit inside */
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
+  position: absolute; /* helps position buttons in label from start of container, so basically it places it on the Yes and No labels (on the content)!! and use bottom styles to move it */
+  top: -4px;
+  left: -30px;
+} /* add new buttons over the old invisible buttons */
+/* ::before helps add the new buttons before the <labels> "Yes" "No" "I acknowledge.." */
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+} /* makes Yes and No radio buttons circular */
+
+.radio-wrapper label::after { /* because can't have 2 befores */
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color); /* don't really need this anymore bc of back..img */
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px; /* up to here, it makes a L shaped thing */
+  transform: rotate(-58deg); /* rotates the L shaped thing to make checkmark */
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+} /* look at comment below */
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+} /* If the radio buttons or checkboxes are in their default state, they'll have no ::after pseudo content. As soon as an input becomes :checked, however, the content and all of the other styles defined earlier will take effect */
+
 .hero-form button {
   font-size: 16px;
-  color: #fce138;
-  background-color: #024e76;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
   padding: 10px 20px;
   border: none; /* this removes the default border the button comes w */
   border-radius: 10px;
 }
+/* Paragraphs that come immediately after any image */
+img + p {
+  font-weight: bold;
+}
 
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--tertiary-color);  
 }
 /* HERO STYLES END */
 
 /* WHAT WE DO STYLES START */
 .intro p {
   font-size: 20px;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   text-align: center;
   line-height: 1.7;
   width: 80%; /* shrinks width of paragraph, and para. is not centered, just the text inside of it */
@@ -202,7 +274,7 @@ section {
 
 /* WHAT YOU DO STYLES  START */
 .steps {
-  background: #fce138;
+  background: var(--primary-color);
 }
 
 .step { /* parent 1 */
@@ -216,11 +288,11 @@ section {
 }
 
 .step:not(:last-child) { /* applies border to every child except last one!! but doesn't apply to h2 child bc the border style is styled after this section so that supersedes */
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
 } /* 2.4.6 used this option because it's less code */
 
 .step h3 { /* child 1a */
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   margin-top: 10px;
   flex: 1 30%; /* 1=flex-grow 30%=flex-basis --> .step h3 will be at least 30% wide and will receive any extra space in the container */
@@ -247,14 +319,14 @@ section {
 }
 
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
-  color: #024e76;
+  color: var(--secondary-color);
 }
 /* WHAT YOU DO STYLES END */
 
@@ -262,7 +334,7 @@ section {
 .section-title {
   font-size: 48px; /* changed from 55px bc 48px is big enough for all screens and 55px would be cramped for mobile screen */
   text-align: center;
-  color: #024e76;
+  color: var(--secondary-color);
   padding-bottom: 20px;
   border-bottom: 3px solid;
   margin: 0 auto 35px auto;
@@ -270,11 +342,11 @@ section {
 }
 
 .primary-border {
-  border-color: #fce138;
+  border-color: var(--primary-color);
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 /* STYLES Repeated For what-we-do what-you-do meet-the-trainers reach-out titles END */
 
@@ -289,8 +361,8 @@ section {
 
 .trainer {
   margin: 20px;
-  background: #024e76;
-  color: #fce138;
+  background: var(--secondary-color);
+  color: var(--primary-color);
   flex: 1; /* flex-grow=1 --> means children will share any extra space evenly */
 }
 
@@ -320,11 +392,11 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  background-color: #024e76;
+  background-color: var(--secondary-color);
 }
 
 .contact h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 /* included the class of the parent just to be more specific --> bc if you just used .iframe and added another .iframe to the html then that one would be affected too */
@@ -350,7 +422,7 @@ section {
 .contact-info h3 {
   /* module has .contact-info h3 */
   font-size: 32px;
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info p,
@@ -363,11 +435,11 @@ section {
 }
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -383,8 +455,8 @@ section {
 .contact-form button {
   width: 100%;
   border: none;
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -392,12 +464,12 @@ section {
 }
 
 .contact-form button:hover {
-  color: #fce138;
-  background: #39a6b2;
+  color: var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 /* REACH OUT STYLES END */
 
